--- a/style.css
+++ b/style.css
@@ -4,8 +4,10 @@
     box-sizing: border-box;
 }
 
-#mainBox {
+#mainBox, #taskBox {
     display: flex;
     flex-direction: column;
     gap: 20px;
+    align-items: center;
+    padding-top: 10px;
 }
